--- a/public/css/document.css
+++ b/public/css/document.css
@@ -5,9 +5,11 @@
 
 body,
 table {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     /*font-family: "Lucida Console", Monaco, monospace;*/
-    font-size: 0.8rem;
+    font-size: 11px;
+    /* font-size: 0.8rem; */
 }
 
 .content-block,
