--- a/public/css/report.css
+++ b/public/css/report.css
@@ -5,7 +5,7 @@ body {
 .content {
     margin: 0 auto;
     /* margin: .5in; */
-    margin-bottom: 100px;
+    /*margin-bottom: 100px;*/
     /*border: 1px solid #F2F2F2;*/
     width: 724px;
     /*height: 1100px;*/
