--- a/public/css/document.css
+++ b/public/css/document.css
@@ -7,7 +7,7 @@ body,
 table {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     /* font-family: Arial, Helvetica, sans-serif; */
-    /*font-family: "Lucida Console", Monaco, monospace;*/
+    /* font-family: "Lucida Console", Monaco, monospace; */
     font-size: 11px;
     /* font-size: 0.8rem; */
 }
@@ -134,7 +134,10 @@ br {
     width: 100%; /* Opcional: Ajusta el ancho de la tabla según tus necesidades */
 }
 
-
 .monospace {
     font-family: "Lucida Console", Monaco, monospace;
+}
+
+.especial { 
+    font-family: DejaVu Sans !important;
 }
