Recepciones:Feat:Formato Acta

--- a/public/css/document.css
+++ b/public/css/document.css
@@ -53,6 +53,14 @@ main {
     font-size: 0.9rem;
 }
 
+.diez {
+    font-size: 1.0rem;
+}
+
+.doce {
+    font-size: 1.2rem;
+}
+
 .catorce {
     font-size: 1.4rem;
 }
