DigitalSignature:Feat: Ajustes en tamaños para modulo recepcion

--- a/public/css/document.css
+++ b/public/css/document.css
@@ -37,6 +37,10 @@ main {
     padding-bottom: 30px;
 }
 
+.cinco {
+    font-size: 0.5rem;
+}
+
 .seis {
     font-size: 0.6rem;
 }
@@ -89,6 +93,10 @@ main {
     font-weight: bold;
 }
 
+.cursiva {
+    font-style: italic;
+}
+
 br {
     display: block;
     /* makes it have a width */
@@ -111,14 +119,18 @@ br {
 }
 
 .signature-container {
-    border: 3px solid #fff;
+    clear: both;
+    position: fixed;
+    height: 50px;
+    bottom: 50px; 
 }
 
 .signature {
     vertical-align: top;
     display: inline-block;
-    padding-right: 3px;
-    padding-bottom: 4px;
+    padding-top: 0px;
+    padding-right: 1px;
+    padding-bottom: 2px;
 }
 
 .danger {
